[package]
name = "mhicon"
version = "0.1.0"
authors = ["Jennifer Glauche <=^.^=@rusty.kittenme.ws>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
toml = ""
elefren = { version = "0.20.1", features = ["toml"] }
